force-app/main/default/objects/CRMforNonProfit__Year_and_Template_Assigment__mdt/CRMforNonProfit__Year_and_Template_Assigment__mdt.object-meta.xml
<CustomObject>
    <description>object to store pairs of years and used templates for self service certificate generation.</description>
    <label>Year and Template Assigment</label>
    <pluralLabel>Year and Template Assigments</pluralLabel>
</CustomObject>