force-app/main/default/objects/CRMforNonProfit__Year_and_Template_Assigment__mdt/fields/CRMforNonProfit__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Email_Template__c</fullName>
    <inlineHelpText>Please insert API Name of the email template that will be used for self service email message.</inlineHelpText>
    <label>Email Template</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>