force-app/main/default/objects/CRMforNonProfit__Year_and_Template_Assigment__mdt/fields/CRMforNonProfit__PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__PDF_Template__c</fullName>
    <inlineHelpText>Please insert API Name of the pdf template that will be used for self service pdf document.</inlineHelpText>
    <label>PDF Template</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>