force-app/main/default/objects/CRMforNonProfit__Year_and_Template_Assigment__mdt/fields/CRMforNonProfit__Year__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Year__c</fullName>
    <inlineHelpText>Please add year... only numbers</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>